@@ -1,10 +1,11 @@
 TO DO
 
-+ before pre3:
-
+- control clicks on closing brackets suck
+- jdk 1.4: fs browser text fields
+- jdk 1.4: still addToSelection() bug
+- wrap guide: don't use font metrics
 - S+END/S+HOME
 - next-fold when cursor is on a top-level line; find first fold start
-- set read only flag of files if vfs doesn't have WRITE_CAP
 - if loadMode() throws error, save of a mode file fails?
 - jdk1.3: open dialog divider
 - expand fold: try to expand even if already expanded
@@ -14,7 +15,6 @@ TO DO
 - C+e , and . insert , and . in the buffer
 - narrow: if collapsed fold, expand one level
 - mention linux numlock issue on compatibility page
-
 - after plugin installation is complete, show dialog with some random info
 - Toggle line comment macro needs to become context-sensitive
 - put package.html everywhere
