@@ -11,12 +11,6 @@ app.version=4.0pre3
 # Info to display on first page of installer
 app.readme=readme.html
 
-# License to display on second page of installer
-app.license=/doc/COPYING.txt
-
-# Main class of program. Used when creating a shortcut
-app.main.class=org.gjt.sp.jedit.jEdit
-
 # Each component must have a name, a size, and a 'fileset'. The fileset is the
 # name of a resource, relative to the root of the JAR, where the list of files
 # is stored, newline delimited
