@@ -27,7 +27,7 @@
  *
  * This macro requires version 3.2 (or greater) of jEdit.
  *
- * $Id: Toggle_Line_Comment.bsh,v 1.3 2001/11/06 14:47:12 jgellene Exp $
+ * $Id: Toggle_Line_Comment.bsh,v 1.4 2001/12/21 07:02:13 spestov Exp $
  *
  * Checked for jEdit 4.0 API
  *
@@ -89,7 +89,9 @@ void toggleLineComment()
 	}
 
 	// main routine of method starts here
-	comment = buffer.getProperty("lineComment");
+	comment = buffer.getContextSensitiveProperty(textArea.getCaretPosition(),
+		"lineComment");
+
 	if (comment == null)
 	{
 		Macros.error(view, "No line comment token to insert");
